fix: make page content visible

--- a/service/static/css/tailwind.css
+++ b/service/static/css/tailwind.css
@@ -554,8 +554,16 @@ video {
   display: none;
 }
 
+.static {
+  position: static;
+}
+
 .absolute {
   position: absolute;
+}
+
+.relative {
+  position: relative;
 }
 
 .inset-0 {
